# APF_Robot_Control

./: CMakeLists.txt  README.md
model/: apf_panda.xml
model/franka_emika_panda/: apf_panda.xml
model/mjctrl-main/: actual_trajectory.txt
model/mjctrl-main/franka_emika_panda/: apf_panda.xml
scripts/: MUJOCO_LOG.TXT  diffik_nullspace.py  track_robot.py  tracked_positions.txt
src/: apf_trajectory.cpp  traj_to_XML.cpp
